# my3dversion

./: .gitignore  README.md  clear_pointcloud_120.xyz  clear_pointcloud_240.xyz  clear_pointcloud_360.xyz  clear_pointcloud_480.xyz  clear_pointcloud_600.xyz  clear_pointcloud_720.xyz  clear_pointcloud_840.xyz  clear_pointcloud_960.xyz  main.py  manual_save_1757471590.xyz  pyproject.toml  requirements.txt
examples/: bundle_adjustment.cpp  bundle_adjustment.py  bundle_adjustment_global(camera)_by_cjh.xyz  bundle_adjustment_global(point)_by_cjh.xyz  camera_calibration.cpp  distortion_correction.cpp  distortion_visualization.py  image_formation.cpp  image_formation0.xyz  image_formation1.xyz  image_formation2.xyz  image_formation3.xyz  image_formation4.xyz  image_stitching.cpp  object_localization.cpp  perspective_correction.cpp  pose_estimation_book1.cpp  pose_estimation_book2.cpp  pose_estimation_book3.cpp  pose_estimation_chessboard.cpp  practical_depth_camera.py  realsense_3d_pointcloud.py  realtime_3d_pointcloud.py  sfm_global.cpp  sfm_global.py  sfm_inc.cpp  sfm_inc.py  triangulation.cpp  triangulation.py  triangulation.xyz  triangulation_implement.xyz  understand_pointcloud.py  video_stabilization.cpp  vo_epipolar.cpp  vo_epipolar.xyz
new/: README_MEDIAPIPE_INTEGRATION.md  camera_test.py  mediapipe_hand_pose.py  simple_crossing_detection.py  supervision_3d_crossing_detection.py  test_mediapipe_hand_pose.py  yolo_pose_detection.py
new2/: README.md  YOLO_INTEGRATION_README.md  hand_obstacle_contact_detector.py  realsense_camera.py  yolo_obstacle_detector.py
