[project]
name = "3d-vision"
version = "1.0.0"
description = "3D Computer Vision Examples and Tools"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "pyrealsense2>=2.50.0",
    "supervision>=0.16.0",
    "ultralytics>=8.0.0",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "pillow>=8.0.0",
    "matplotlib>=3.5.0",
    "mediapipe>=0.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
